Fixed: z-index on category delete button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,14 +103,16 @@ header {
   width: calc(100% - 65px);
   font-size: 24px;
   line-height: 28px;
+  z-index: 0;
 }
 
 .category-heading button {
-  float: right;
-  margin-top: 20px;
-  margin-right: 20px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
   height: 25px;
   width: 25px;
+  z-index: 1;
 }
 
 .category-form {
